--- a/mobile/style.css
+++ b/mobile/style.css
@@ -1,12 +1,7 @@
-/* Fix user-agent */
-
-* {
-    box-sizing: border-box;
-}
-
+body,
 html {
-    font-weight: 300;
-    -webkit-font-smoothing: antialiased;
+    margin: 0;
+    padding: 0;
 }
 
 html,
@@ -21,132 +16,61 @@ input {
         sans-serif;
 }
 
-html,
-body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-ul {
-    list-style: none;
-    word-wrap: break-word;
-}
-
-/* Pages */
-
-.pages {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
-
 .page {
-    height: 100%;
-    position: absolute;
+    height: 100vh;
     width: 100%;
+    background-color: #1d1d1d;
 }
 
-/* Login Page */
-
-.login.page {
-    background-color: #000;
+.connect {
+    display: flex;
+    overflow: hidden;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
 }
 
-.login.page .form {
-    height: 100px;
-    margin-top: -100px;
-    position: absolute;
-
-    text-align: center;
-    top: 50%;
-    width: 100%;
+.connect .title {
+    margin-bottom: 0px;
 }
 
-.login.page .form .usernameInput {
+.connect .input {
     background-color: transparent;
     border: none;
     border-bottom: 2px solid #fff;
     outline: none;
-    padding-bottom: 15px;
     text-align: center;
     width: 400px;
+
+    color: white;
+    padding-bottom: 4px;
+    margin-top: 12px;
 }
 
-.login.page .title {
-    font-size: 200%;
-}
-
-.login.page .usernameInput {
-    font-size: 200%;
-    letter-spacing: 3px;
-}
-
-.login.page .title,
-.login.page .usernameInput {
-    color: #fff;
-    font-weight: 100;
-}
-
-/* Chat page */
-
-.chat.page {
-    display: none;
-}
-
-/* Font */
-
-.messages {
-    font-size: 150%;
-}
-
-.inputMessage {
-    font-size: 100%;
-}
-
-.log {
-    color: gray;
-    font-size: 70%;
-    margin: 5px;
-    text-align: center;
-}
-
-/* Messages */
-
-.chatArea {
+.buttons {
+    width: 50%;
     height: 100%;
-    padding-bottom: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-.messages {
-    height: 100%;
-    margin: 0;
-    overflow-y: scroll;
-    padding: 10px 20px 10px 20px;
+.buttons .middle {
+    width: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
-.message.typing .messageBody {
-    color: gray;
+.button {
+    width: 40px;
+    height: 40px;
+    margin: 10px;
+    background-color: red;
 }
 
-.username {
-    font-weight: 700;
-    overflow: hidden;
-    padding-right: 15px;
-    text-align: right;
-}
-
-/* Input */
-
-.inputMessage {
-    border: 10px solid #000;
-    bottom: 0;
-    height: 60px;
-    left: 0;
-    outline: none;
-    padding-left: 10px;
-    position: absolute;
-    right: 0;
-    width: 100%;
+.button .up {
+    margin: 10px;
 }
