--- a/mobile/style.css
+++ b/mobile/style.css
@@ -55,22 +55,41 @@ input {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    float: right;
 }
 
 .buttons .middle {
-    width: 300px;
+    width: 180px;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .button {
-    width: 40px;
-    height: 40px;
-    margin: 10px;
-    background-color: red;
+    width: 60px;
+    height: 60px;
+    background-color: #6f6c6c;
+    position: relative;
+    border-radius: 20px;
 }
 
-.button .up {
-    margin: 10px;
+.arrow:after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: url("./arrow.png");
+    background-size: cover;
+}
+
+.down.arrow:after {
+    transform: rotate(90deg);
+}
+
+.left.arrow:after {
+    transform: rotate(180deg);
+}
+
+.up.arrow:after {
+    transform: rotate(270deg);
 }
