--- a/mobile/style.css
+++ b/mobile/style.css
@@ -23,7 +23,8 @@ input {
 }
 
 .connect,
-.control {
+.control,
+.over {
     display: flex;
     overflow: hidden;
     /* flex-direction: column; */
@@ -109,4 +110,8 @@ input {
 
 .pause .button {
     margin: 30px
+}
+
+.over span {
+    font-size: 48px;
 }
