--- a/mobile/style.css
+++ b/mobile/style.css
@@ -19,7 +19,8 @@ input {
 .page {
     height: 100vh;
     width: 100%;
-    background-color: #1d1d1d;
+    background-color: #400040;
+    color: #E6CFB8 !important;
 }
 
 .connect,
@@ -84,28 +85,42 @@ input {
     width: 100%;
     height: 100%;
     position: absolute;
-    background: url("./arrow.png");
-    background-size: cover;
+    background-image: url("./right.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 .down.arrow:after {
-    transform: rotate(90deg);
+    background-image: url("./down.png");
 }
 
 .left.arrow:after {
-    transform: rotate(180deg);
+    background-image: url("./up.png");
 }
 
 .up.arrow:after {
-    transform: rotate(270deg);
+    background-image: url("./up.png");
 }
 
 .pause {
     width: 50%;
+    height: 100%;
     display: flex;
     align-items: start;
     justify-content: left;
+    position: relative;
+}
+
+.pause .button.arrow:after {
+    content: '';
+    width: 100%;
     height: 100%;
+    position: absolute;
+    background-image: url("./pause.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 .pause .button {
