--- a/desktop/css/game.css
+++ b/desktop/css/game.css
@@ -21,6 +21,8 @@ body {
     background-repeat: repeat;*/
     font-family: 'Arial';
     position: relative;
+    width: 100vw;
+    height: 100vh;
 }
 
 h1, h2, h3, h4, h5, h6 {
